# deepreach_CMPT419

./: .gitignore  Air3DSim.py  QUICK_REFERENCE.sh  README.md  brt_vol_err.py  comparison.py  coordinate_normalizer.py  data_sumarizer.py  gradient_sweep.py  instructions.txt  requirements.txt  run_experiment.py  setup_environment.py  test_scenario.py  train_dubins3d.py  validate_gradients.py  visualize_scenario.py
baselines/: README.md  air3d_lr5_analysis.py  collision6d_analysis.py  collision6d_demo.py  compare_values.py  compare_values_6d.py  config.py  dubins3d_analysis.py  dubins3d_demo.py  narrow_passage_10d_analysis.py
brt_vol_err_results/: brt_vol_err_results.json
deepreach_ros/: package.xml  setup.cfg  setup.py
deepreach_ros/deepreach_ros/: __init__.py  dubins3d_control.py  inference_node.py  normalization.py  safety_bubble_visualizer.py  siren_model.py  stress_test_node.py
deepreach_ros/launch/: deepreach_goal2.launch.py  deepreach_inference.launch.py
deepreach_ros/rviz/: deepreach_goal2.rviz  deepreach_goal2_topdown.rviz
docs/: GOAL2_RUNBOOK.md  SIREN_CODE_WALKTHROUGH.md  SIREN_MATHEMATICAL_FOUNDATION.md  SIREN_NETWORKS_STUDY.md  TRAINING_AND_ROS_INTEGRATION_GUIDE.md
dynamics/: dynamics.py
training_benchmarks/: Dubins2D_Safety_Bench_full_benchmarks.csv  air3d_run_full_benchmarks.csv  air3d_run_lr5_full_benchmarks.csv  air3d_run_normtrain_full_benchmarks.csv  dubins3d_tutorial_run_full_benchmarks.csv  narrow_passage_10d_run_lr5_full_benchmarks.csv  narrow_passage_10d_run_lr5_hl4_full_benchmarks.csv  np_working_v1_full_benchmarks.csv  (+2 more)
(+35 files in other folders)
