<?xml version="1.0"?>
<package format="3">
  <name>deepreach_ros</name>
  <version>0.1.0</version>
  <description>ROS 2 inference package for DeepReach Dubins3D safety overrides.</description>
  <maintainer email="user@example.com">deepreach user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>torch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
